--- a/src/catalog.twig
+++ b/src/catalog.twig
@@ -7,9 +7,9 @@
 		{% include '/blocks/catalog-sort/catalog-sort.twig' %}
 		<div class="catalog__content row">
 			{% include '/blocks/catalog-sidebar/catalog-sidebar.twig' %}
-			<div class="catalog__content-items col-xxl-9 col-xl-8">
+			<div class="catalog__content-items col-xl-9">
 				<div class="catalog__content-items-block row">
-					<div class="catalog-item-wrapper col-xl-6 col-xxl-4">
+					<div class="catalog-item-wrapper col-xl-4">
 						<div class="catalog-item catalog-item--sale">
 							<div class="catalog-item__sale">
 								15%
@@ -17,11 +17,11 @@
 							<div class="catalog-item__head">
 								<img src="img/cataalog-image.png" alt="">
 								<div class="catalog-item__head-btns">
-									<button class="catalog-item__head-btn catalog-item__head-btn--favorite" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/favorite.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--favorite d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/favorite-i.svg' %}
 									</button>
-									<button class="catalog-item__head-btn catalog-item__head-btn--cart" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/cart.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--cart d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/cart-i.svg' %}
 									</button>
 								</div>
 							</div>
@@ -45,7 +45,7 @@
 							<button class="catalog-item__btn" onclick="pegas.catalogItem.open('catalog-item-popup',this)">Примерить в салоне</button>
 						</div>
 					</div>
-					<div class="catalog-item-wrapper col-xl-6 col-xxl-4">
+					<div class="catalog-item-wrapper col-xl-4">
 						<div class="catalog-item catalog-item--sale">
 							<div class="catalog-item__sale">
 								15%
@@ -53,11 +53,11 @@
 							<div class="catalog-item__head">
 								<img src="img/cataalog-image.png" alt="">
 								<div class="catalog-item__head-btns">
-									<button class="catalog-item__head-btn catalog-item__head-btn--favorite" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/favorite.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--favorite d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/favorite-i.svg' %}
 									</button>
-									<button class="catalog-item__head-btn catalog-item__head-btn--cart" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/cart.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--cart d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/cart-i.svg' %}
 									</button>
 								</div>
 							</div>
@@ -81,7 +81,7 @@
 							<button class="catalog-item__btn" onclick="pegas.catalogItem.open('catalog-item-popup',this)">Примерить в салоне</button>
 						</div>
 					</div>
-					<div class="catalog-item-wrapper  col-xl-6 col-xxl-4">
+					<div class="catalog-item-wrapper  col-xl-4">
 						<div class="catalog-item catalog-item--sale">
 							<div class="catalog-item__sale">
 								15%
@@ -89,11 +89,11 @@
 							<div class="catalog-item__head">
 								<img src="img/cataalog-image.png" alt="">
 								<div class="catalog-item__head-btns">
-									<button class="catalog-item__head-btn catalog-item__head-btn--favorite" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/favorite.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--favorite d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/favorite-i.svg' %}
 									</button>
-									<button class="catalog-item__head-btn catalog-item__head-btn--cart" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/cart.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--cart d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/cart-i.svg' %}
 									</button>
 								</div>
 							</div>
@@ -120,7 +120,7 @@
 				</div>
 				{% include '/blocks/catalog-banner/catalog-banner.twig' %}
 				<div class="catalog__content-items-block row">
-					<div class="catalog-item-wrapper col-xl-6 col-xxl-4">
+					<div class="catalog-item-wrapper col-xl-4">
 						<div class="catalog-item catalog-item--sale">
 							<div class="catalog-item__sale">
 								15%
@@ -128,11 +128,11 @@
 							<div class="catalog-item__head">
 								<img src="img/cataalog-image.png" alt="">
 								<div class="catalog-item__head-btns">
-									<button class="catalog-item__head-btn catalog-item__head-btn--favorite" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/favorite.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--favorite d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/favorite-i.svg' %}
 									</button>
-									<button class="catalog-item__head-btn catalog-item__head-btn--cart" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/cart.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--cart d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/cart-i.svg' %}
 									</button>
 								</div>
 							</div>
@@ -156,7 +156,7 @@
 							<button class="catalog-item__btn" onclick="pegas.catalogItem.open('catalog-item-popup',this)">Примерить в салоне</button>
 						</div>
 					</div>
-					<div class="catalog-item-wrapper col-xl-6 col-xxl-4">
+					<div class="catalog-item-wrapper col-xl-4">
 						<div class="catalog-item catalog-item--sale">
 							<div class="catalog-item__sale">
 								15%
@@ -164,11 +164,11 @@
 							<div class="catalog-item__head">
 								<img src="img/cataalog-image.png" alt="">
 								<div class="catalog-item__head-btns">
-									<button class="catalog-item__head-btn catalog-item__head-btn--favorite" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/favorite.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--favorite d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/favorite-i.svg' %}
 									</button>
-									<button class="catalog-item__head-btn catalog-item__head-btn--cart" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/cart.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--cart d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/cart-i.svg' %}
 									</button>
 								</div>
 							</div>
@@ -192,7 +192,7 @@
 							<button class="catalog-item__btn" onclick="pegas.catalogItem.open('catalog-item-popup',this)">Примерить в салоне</button>
 						</div>
 					</div>
-					<div class="catalog-item-wrapper col-xl-6 col-xxl-4">
+					<div class="catalog-item-wrapper col-xl-4">
 						<div class="catalog-item catalog-item--sale">
 							<div class="catalog-item__sale">
 								15%
@@ -200,11 +200,11 @@
 							<div class="catalog-item__head">
 								<img src="img/cataalog-image.png" alt="">
 								<div class="catalog-item__head-btns">
-									<button class="catalog-item__head-btn catalog-item__head-btn--favorite" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/favorite.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--favorite d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/favorite-i.svg' %}
 									</button>
-									<button class="catalog-item__head-btn catalog-item__head-btn--cart" onclick="pegas.catalogItem.add(this)">
-										{% include 'assets/img/cart.svg' %}
+									<button class="catalog-item__head-btn catalog-item__head-btn--cart d-flex align-items-center justify-content-center" onclick="pegas.catalogItem.add(this)">
+										{% include 'assets/img/cart-i.svg' %}
 									</button>
 								</div>
 							</div>
