--- a/src/blocks/catalog-item/catalog-item.scss
+++ b/src/blocks/catalog-item/catalog-item.scss
@@ -2,12 +2,15 @@
 .catalog-item
 {
 	position: relative;
-	padding: 3px 35px 30px;
+	// padding: 3px 35px 30px;
+	padding-bottom: 30px;
 	box-shadow: 0px 7px 1px rgba(83, 83, 83, 0.25);
 	border: 0.5px solid #9D9D9D;
 	background: #FFFFFF;
 	border-radius: 35px;
 	margin-bottom: 20px;
+	overflow: hidden;
+
 	.catalog-item__sale
 	{
 		display: none;
@@ -82,6 +85,10 @@
 {
 	position: relative;
 	height: 355px;
+	@media (max-width:1400px)
+	{
+		height: 300px;
+	}
 	width: 100%;
 	background: rgba(242, 245, 248, 0.75);
 	margin-bottom: 15px;
@@ -97,11 +104,17 @@
 		align-items: center;
 		position: absolute;
 		top: 33px;
-		right: -2px;
+		right: 15px;
 		margin-bottom: 15px;
 		.catalog-item__head-btn
 		{
+			width: 60px;
+			height: 60px;
 			border:0;
+			background: #C4C4C4;
+			box-shadow: 0px 4px 4px rgba(170, 170, 170, 0.25);
+			border-radius: 50%;
+			position: relative;
 			&:first-child{margin-right: 10px;}
 		}
 		.catalog-item__head-btn--favorite
