--- a/src/blocks/catalog-sidebar/catalog-sidebar.twig
+++ b/src/blocks/catalog-sidebar/catalog-sidebar.twig
@@ -1,4 +1,4 @@
-<div class="catalog-sidebar col-xxl-3 col-xl-4">
+<div class="catalog-sidebar col-xl-3">
 	<ul class="catalog-sidebar__list">
 		<li class="catalog-sidebar__item" onclick="pegas.catalogSidebar.toggle(this)">
 			{% include 'assets/img/socks-catalog.svg' %}
