--- a/src/blocks/g-select/g-select.scss
+++ b/src/blocks/g-select/g-select.scss
@@ -78,6 +78,7 @@
 	opacity: 0;
 	z-index: 2;
 	scrollbar-width: none; /* for mozila */
+	min-width: 330px;
 	&::-webkit-scrollbar {
 		width: 0px;
 		background: transparent;
