--- a/src/blocks/catalog-sidebar/catalog-sidebar.scss
+++ b/src/blocks/catalog-sidebar/catalog-sidebar.scss
@@ -8,7 +8,8 @@
 	span
 	{
 		font-weight: 600;
-		font-size: 20px;
+		font-size: 16px;
+		margin-left: 10px;
 		line-height: 22px;
 		text-transform: uppercase;
 		color: #828181;
@@ -80,7 +81,7 @@
 	{
 		font-family: $second-font;
 		font-weight: 600;
-		font-size: 20px;
+		font-size: 15px;
 		line-height: 22px;
 		color: #9D9D9D;
 		text-transform: uppercase;
