--- a/src/blocks/catalog-sidebar/catalog-sidebar.twig
+++ b/src/blocks/catalog-sidebar/catalog-sidebar.twig
@@ -1,4 +1,7 @@
 <div class="catalog-sidebar col-xl-3">
+	<div class="catalog-sort__first row">
+		<span class="catalog-sort__btn col-12">Каталог</span>
+	</div>
 	<ul class="catalog-sidebar__list">
 		<li class="catalog-sidebar__item" onclick="pegas.catalogSidebar.toggle(this)">
 			{% include 'assets/img/socks-catalog.svg' %}
