--- a/src/blocks/catalog-sort/catalog-sort.scss
+++ b/src/blocks/catalog-sort/catalog-sort.scss
@@ -4,20 +4,25 @@
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 33px;
+	.catalog-sort__first
+	{
+		margin-bottom: 0;
+	}
 }
 .catalog-sort__first
 {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	margin-bottom: 33px;
 }
 .catalog-sort__btn
 {
 	background: #6195BE;
 	box-shadow: 0px 4px 4px rgba(170, 170, 170, 0.25);
 	border-radius: 20px;
-	height: 75px;
-	line-height: 75px;
+	height: 60px;
+	line-height: 60px;
 	width: 100%;
 	text-align: center;
 	color:white;
@@ -80,7 +85,7 @@
 		.g-select__selected
 		{
 			height: 100%;
-			width: 400px;
+			width: 100%;
 			padding: 0 27px;
 		}
 		.g-select__selected-name
