--- a/src/blocks/catalog-sort/catalog-sort.twig
+++ b/src/blocks/catalog-sort/catalog-sort.twig
@@ -1,12 +1,11 @@
 <div class="catalog-sort row">
-	<div class="catalog-sort__first row col-xxl-6 col-xl-8 col-md-6">
-		<a href="#" class="catalog-sort__btn col-xl-6 col-lg-6 col-md-6">Каталог</a>
-		<label class="catalog-sort__label col-xl-6 col-lg-6">
+	<div class="catalog-sort__first row col-xxl-4 col-xl-5 col-md-6">
+		<label class="catalog-sort__label col-12">
 			<input type="text" placeholder="Поиск товара">
 			{% include 'assets/img/finder.svg' %}
 		</label>
 	</div>
-	<div class="catalog-sort__flex col-xxl-5 col-xl-4">
+	<div class="catalog-sort__flex col-xxl-8 col-xl-7">
 		<span class="d-none d-xxl-block">Сортировать</span>
 		<div class="g-select _select">
 			<input type="hidden" class="_selected-value" />
