--- a/src/blocks/catalog-item/catalog-item.twig
+++ b/src/blocks/catalog-item/catalog-item.twig
@@ -15,7 +15,7 @@
 			</div>
 		</div>
 		<span class="catalog-item__name">Арт.LM-708.050</span>
-		<a href="#" class="catalog-item__link">
+		<a href="detail.html" class="catalog-item__link">
 			<span>Подробнее о товаре</span>
 			{% include 'assets/img/arrod-down.svg' %}
 		</a>
