--- a/src/blocks/footer/footer.twig
+++ b/src/blocks/footer/footer.twig
@@ -12,19 +12,19 @@
 						<div class="footer__row-links-block-title">основное меню</div>
 						<ul class="footer__row-links-list row">
 							<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-								<a href="$"">каталог</a>
+								<a href="catalog.html"">каталог</a>
 							</li>
 							<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-								<a href="$">о компании</a>
+								<a href="about.html">о компании</a>
 							</li>
 							<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-								<a href="$">контакты</a>
+								<a href="contacts.html">контакты</a>
 							</li>
 							<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-								<a href="$">кинезиоцентр</a>
+								<a href="https://kinesioblag.ru/" target="_blank">кинезиоцентр</a>
 							</li>
 						</ul>
-						<a href="#" class="footer__row-links-privaci">Политика конфиденциальности</a>
+						<a href="privacy.html" class="footer__row-links-privaci">Политика конфиденциальности</a>
 					</div>
 				</div>
 				<div class="footer__row-finder col-xl-4 col-lg-5 col-md-5">
