--- a/src/blocks/header/header.twig
+++ b/src/blocks/header/header.twig
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<div class="header__row header__desctop row">
-			<a href="#" class="col-auto header__logo">
+			<a href="." class="col-auto header__logo">
 				<img src="img/logo-pegas-head.svg" />
 			</a>
 			<div class="header__lists-block col">
@@ -22,12 +22,12 @@
 				</ul>
 				<ul class="header__list header__list--bottom justify-content-between">
 					<li class="header__item">
-						<a href="#" class="header__item-link">
+						<a href="catalog.html" class="header__item-link">
 							каталог
 						</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link">
+						<a href="https://kinesioblag.ru/" class="header__item-link" target="_blank">
 							кинезиоцентр
 						</a>
 					</li>
@@ -35,26 +35,26 @@
 						<a href="javascript:void(0)" class="header__item-link">о компании</a>
 						{% include "assets/img/arrod-down.svg" %}
 						<ul class="header__item-list">
-							<li class="header__item-item active">
-								<a href="#">О нас</a>
+							<li class="header__item-item _active">
+								<a href="about.html">О нас</a>
 							</li>
 							<li class="header__item-item">
-								<a href="#">правила магазина</a>
+								<a href="rules.html">правила магазина</a>
 							</li>
 						</ul>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link">
+						<a href="contacts.html" class="header__item-link">
 							контакты
 						</a>
 					</li>
 					<li class="header__item">
 						<div class="header__item-flex">
-							<a href="#" class="header__item-basket-block">
+							<a href="cart.html" class="header__item-basket-block">
 								{% include 'assets/img/basket.svg' %}
 								<div class="header__item-basket-counter">1</div>
 							</a>
-							<a href="#" class="header__item-basket-block">
+							<a href="favorits.html" class="header__item-basket-block">
 								{% include 'assets/img/like.svg' %}
 							</a>
 						</div>
@@ -69,10 +69,10 @@
 			<div class="header__mobile-menu">
 				<ul class="header__mobile-menu-list">
 					<li class="header__mobile-menu-item">
-						<a href="#" class="active">КАТАЛОГ</a>
+						<a href="catalog.html" class="_active">КАТАЛОГ</a>
 					</li>
 					<li class="header__mobile-menu-item">
-						<a href="#">Кинезиоцентр</a>
+						<a href="https://kinesioblag.ru/" target="_blank">Кинезиоцентр</a>
 					</li>
 					<li class="header__mobile-menu-item" onclick="pegas.header.showDopItems(this)">
 						<a href="javascript:void(0)">О компании</a>
@@ -81,15 +81,15 @@
 					<li class="header__mobile-shower">
 						<ul class="header__mobile-shower-list">
 							<li class="header__mobile-shower-item">
-								<a href="#">О нас</a>
+								<a href="about.html">О нас</a>
 							</li>
 							<li class="header__mobile-shower-item">
-								<a href="#">правила магазина</a>
+								<a href="rules.html">правила магазина</a>
 							</li>
 						</ul>
 					</li>
 					<li class="header__mobile-menu-item">
-						<a href="#">КОНТАКТЫ</a>
+						<a href="contacts.html">КОНТАКТЫ</a>
 					</li>
 				</ul>
 			</div>
@@ -140,12 +140,12 @@
 				</ul>
 				<ul class="header__list">
 					<li class="header__item">
-						<a href="#" class="header__item-link">
+						<a href="catalog.html" class="header__item-link">
 							каталог
 						</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link">
+						<a href="https://kinesioblag.ru/" class="header__item-link" target="_blank">
 							кинезиоцентр
 						</a>
 					</li>
@@ -154,15 +154,15 @@
 						{% include "assets/img/arrod-down.svg" %}
 						<ul class="header__item-list">
 							<li class="header__item-item">
-								<a href="#">О нас</a>
+								<a href="about.html">О нас</a>
 							</li>
 							<li class="header__item-item">
-								<a href="#">правила магазина</a>
+								<a href="rules.html">правила магазина</a>
 							</li>
 						</ul>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link">
+						<a href="contacts.html" class="header__item-link">
 							контакты
 						</a>
 					</li>
