--- a/src/catalog.twig
+++ b/src/catalog.twig
@@ -27,7 +27,7 @@
 								</div>
 							</div>
 							<span class="catalog-item__name">Арт.LM-708.050</span>
-							<a href="#" class="catalog-item__link">
+							<a href="detail.html" class="catalog-item__link">
 								<span>Подробнее о товаре</span>
 								{% include 'assets/img/arrod-down.svg' %}
 							</a>
@@ -63,7 +63,7 @@
 								</div>
 							</div>
 							<span class="catalog-item__name">Арт.LM-708.050</span>
-							<a href="#" class="catalog-item__link">
+							<a href="detail.html" class="catalog-item__link">
 								<span>Подробнее о товаре</span>
 								{% include 'assets/img/arrod-down.svg' %}
 							</a>
@@ -99,7 +99,7 @@
 								</div>
 							</div>
 							<span class="catalog-item__name">Арт.LM-708.050</span>
-							<a href="#" class="catalog-item__link">
+							<a href="detail.html" class="catalog-item__link">
 								<span>Подробнее о товаре</span>
 								{% include 'assets/img/arrod-down.svg' %}
 							</a>
@@ -138,7 +138,7 @@
 								</div>
 							</div>
 							<span class="catalog-item__name">Арт.LM-708.050</span>
-							<a href="#" class="catalog-item__link">
+							<a href="detail.html" class="catalog-item__link">
 								<span>Подробнее о товаре</span>
 								{% include 'assets/img/arrod-down.svg' %}
 							</a>
@@ -174,7 +174,7 @@
 								</div>
 							</div>
 							<span class="catalog-item__name">Арт.LM-708.050</span>
-							<a href="#" class="catalog-item__link">
+							<a href="detail.html" class="catalog-item__link">
 								<span>Подробнее о товаре</span>
 								{% include 'assets/img/arrod-down.svg' %}
 							</a>
@@ -210,7 +210,7 @@
 								</div>
 							</div>
 							<span class="catalog-item__name">Арт.LM-708.050</span>
-							<a href="#" class="catalog-item__link">
+							<a href="detail.html" class="catalog-item__link">
 								<span>Подробнее о товаре</span>
 								{% include 'assets/img/arrod-down.svg' %}
 							</a>
